set up first card with html components

--- a/index.html
+++ b/index.html
@@ -15,10 +15,29 @@
   <div class="row row-cols-1 row-cols-md-3 g-4">
   <div class="col">
     <div class="card h-100">
-      <img src="..." class="card-img-top" alt="...">
+      <header>
+        <h2> Dreamsicle Roller Skates</h2>
+      </header class="product title">
+      <img src="Orange-Skates.webp"class="card-img-top" alt="Orange Roller Skates">
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        <h5 class="card-description">These eye catching skates are sure to dazzle in the rink or at the skate park. </h5>
+        <p class="availability">Available</p>
+      <div>
+        <header>
+          <h3>Specifications</h3>
+        </header>
+          <p>Sizes 5-13</p>
+          <p>Weight: 2 lbs</p>
+          <footer class="valid">Valid until 10/01/2023</footer>
+      </div>
+      <div class="price">
+        <header>
+          <h4>Pricing</h4>
+        </header>
+          <p class="pricing">1 for $75.00</p>
+          <p class="pricing">3 for $200.00</p>
+          <p class="pricing">15 for $500.00</p>
+      </div>
       </div>
     </div>
   </div>
