added html elements for second card

--- a/index.html
+++ b/index.html
@@ -43,13 +43,33 @@
   </div>
   <div class="col">
     <div class="card h-100">
-      <img src="..." class="card-img-top" alt="...">
+      <header>
+        <h2> Disco Roller Skates</h2>
+      </header class="product title">
+      <img src="disco-skates.jpeg"class="card-img-top" alt="Shiny Disco Roller Skates">
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This is a short card.</p>
+        <h5 class="card-description">Glamourous skates made to boogie the night away. </h5>
+        <p class="availability">Available</p>
+      <div>
+        <header>
+          <h3>Specifications</h3>
+        </header>
+          <p>Sizes 9-14</p>
+          <p>Weight: 3 lbs</p>
+          <footer class="valid">Valid until 12/25/2023</footer>
+      </div>
+      <div class="price">
+        <header>
+          <h4>Pricing</h4>
+        </header>
+          <p class="pricing">1 for $180.00</p>
+          <p class="pricing">5 for $500.00</p>
+          <p class="pricing">20 for $20,000.00</p>
+      </div>
       </div>
     </div>
   </div>
+
   <div class="col">
     <div class="card h-100">
       <img src="..." class="card-img-top" alt="...">
