added html elements for third card

--- a/index.html
+++ b/index.html
@@ -72,19 +72,29 @@
 
   <div class="col">
     <div class="card h-100">
-      <img src="..." class="card-img-top" alt="...">
+      <header>
+        <h2> Derby Skates</h2>
+      </header class="product title">
+      <img src="derby-skates.webp"class="card-img-top" alt="black and green derby skates">
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+        <h5 class="card-description">Rugged skates to leave your fiercest competitors in the dust. </h5>
+        <p class="availability">Available</p>
+      <div>
+        <header>
+          <h3>Specifications</h3>
+        </header>
+          <p>Sizes 5.5-12</p>
+          <p>Weight: 3.5 lbs</p>
+          <footer class="valid">Valid until 8/15/2023</footer>
       </div>
-    </div>
-  </div>
-  <div class="col">
-    <div class="card h-100">
-      <img src="..." class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+      <div class="price">
+        <header>
+          <h4>Pricing</h4>
+        </header>
+          <p class="pricing">1 for $200.00</p>
+          <p class="pricing">10 for $1,500.00</p>
+          <p class="pricing"> 30 for $75,000.00</p>
+      </div>
       </div>
     </div>
   </div>
