added card for punk skates - added html elements

--- a/index.html
+++ b/index.html
@@ -98,17 +98,65 @@
       </div>
     </div>
   </div>
+  
   <div class="col">
     <div class="card h-100">
-      <img src="..." class="card-img-top" alt="...">
+      <header>
+        <h2> Disco Roller Skates</h2>
+      </header class="product title">
+      <img src="disco-skates.jpeg"class="card-img-top" alt="Shiny Disco Roller Skates">
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        <h5 class="card-description">Glamourous skates made to boogie the night away. </h5>
+        <p class="availability">Available</p>
+      <div>
+        <header>
+          <h3>Specifications</h3>
+        </header>
+          <p>Sizes 9-14</p>
+          <p>Weight: 3 lbs</p>
+          <footer class="valid">Valid until 12/25/2023</footer>
+      </div>
+      <div class="price">
+        <header>
+          <h4>Pricing</h4>
+        </header>
+          <p class="pricing">1 for $180.00</p>
+          <p class="pricing">5 for $500.00</p>
+          <p class="pricing">20 for $20,000.00</p>
+      </div>
       </div>
     </div>
   </div>
-</div>
+  <div class="col">
+    <div class="card h-100">
+      <header>
+        <h2> Punk Skates</h2>
+      </header class="product title">
+      <img src="punk-skates.jpeg"class="card-img-top" alt="Edgy and sharp black skates">
+      <div class="card-body">
+        <h5 class="card-description">Shred some pavement and stick it to The Man in these hard core punk skates. </h5>
+        <p class="availability">Available</p>
+      <div>
+        <header>
+          <h3>Specifications</h3>
+        </header>
+          <p>Sizes 7.5-12</p>
+          <p>Weight: 7 lbs</p>
+          <footer class="valid">Valid until 5/1/2023</footer>
+      </div>
+      <div class="price">
+        <header>
+          <h4>Pricing</h4>
+        </header>
+          <p class="pricing">1 for $800.00</p>
+          <p class="pricing">5 for $1,200.00</p>
+          <p class="pricing">7 for $1,500.00</p>
+      </div>
+      </div>
+    </div>
+  </div>
 
+  
 
 
 
