added html elements for the glow skates

--- a/index.html
+++ b/index.html
@@ -102,27 +102,27 @@
   <div class="col">
     <div class="card h-100">
       <header>
-        <h2> Disco Roller Skates</h2>
+        <h2> Glow Skates</h2>
       </header class="product title">
-      <img src="disco-skates.jpeg"class="card-img-top" alt="Shiny Disco Roller Skates">
+      <img src="glow-skates.png"class="card-img-top" alt="Light up roller skates">
       <div class="card-body">
-        <h5 class="card-description">Glamourous skates made to boogie the night away. </h5>
+        <h5 class="card-description">Brighten up the rink with these glow in the dark skates. </h5>
         <p class="availability">Available</p>
       <div>
         <header>
           <h3>Specifications</h3>
         </header>
-          <p>Sizes 9-14</p>
-          <p>Weight: 3 lbs</p>
-          <footer class="valid">Valid until 12/25/2023</footer>
+          <p>Sizes 4.5-16</p>
+          <p>Weight: 2.5 lbs</p>
+          <footer class="valid">Valid until 4/27/2023</footer>
       </div>
       <div class="price">
         <header>
           <h4>Pricing</h4>
         </header>
-          <p class="pricing">1 for $180.00</p>
-          <p class="pricing">5 for $500.00</p>
-          <p class="pricing">20 for $20,000.00</p>
+          <p class="pricing">1 for $100.00</p>
+          <p class="pricing">2 for $150.00</p>
+          <p class="pricing">3 for $200.00</p>
       </div>
       </div>
     </div>
