--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         <header>
           <h3>Specifications</h3>
         </header>
-          <p>Sizes 5-13</p>
-          <p>Weight: 2 lbs</p>
+          <p class="specific">Sizes 5-13</p>
+          <p class="specific">Weight: 2 lbs</p>
           <footer class="valid">Valid until 10/01/2023</footer>
       </div>
       <div class="price">
@@ -54,8 +54,8 @@
         <header>
           <h3>Specifications</h3>
         </header>
-          <p>Sizes 9-14</p>
-          <p>Weight: 3 lbs</p>
+          <p class="specific">Sizes 9-14</p>
+          <p class="specific">Weight: 3 lbs</p>
           <footer class="valid">Valid until 12/25/2023</footer>
       </div>
       <div class="price">
@@ -83,8 +83,8 @@
         <header>
           <h3>Specifications</h3>
         </header>
-          <p>Sizes 5.5-12</p>
-          <p>Weight: 3.5 lbs</p>
+          <p class="specific">Sizes 5.5-12</p>
+          <p class="specific">Weight: 3.5 lbs</p>
           <footer class="valid">Valid until 8/15/2023</footer>
       </div>
       <div class="price">
@@ -112,8 +112,8 @@
         <header>
           <h3>Specifications</h3>
         </header>
-          <p>Sizes 4.5-16</p>
-          <p>Weight: 2.5 lbs</p>
+          <p class="specific">Sizes 4.5-16</p>
+          <p class="specific">Weight: 2.5 lbs</p>
           <footer class="valid">Valid until 4/27/2023</footer>
       </div>
       <div class="price">
@@ -132,7 +132,7 @@
       <header>
         <h2> Punk Skates</h2>
       </header class="product title">
-      <img src="punk-skates.jpeg"class="card-img-top" alt="Edgy and sharp black skates">
+        <img src="punk-skates.jpeg"class="card-img-top" alt="Edgy and sharp black skates">
       <div class="card-body">
         <h5 class="card-description">Shred some pavement and stick it to The Man in these hard core punk skates. </h5>
         <p class="availability">Available</p>
@@ -140,8 +140,8 @@
         <header>
           <h3>Specifications</h3>
         </header>
-          <p>Sizes 7.5-12</p>
-          <p>Weight: 7 lbs</p>
+          <p class="specific">Sizes 7.5-12</p>
+          <p class="specific">Weight: 7 lbs</p>
           <footer class="valid">Valid until 5/1/2023</footer>
       </div>
       <div class="price">
