added sold over overlay image

--- a/index.html
+++ b/index.html
@@ -133,9 +133,10 @@
         <h2> Punk Skates</h2>
       </header class="product title">
         <img src="punk-skates.jpeg"class="card-img-top" alt="Edgy and sharp black skates">
+        <img src="soldOut.png" class="sold-out" alt="this product is sold out">
       <div class="card-body">
         <h5 class="card-description">Shred some pavement and stick it to The Man in these hard core punk skates. </h5>
-        <p class="availability">Available</p>
+        <p class="availability">Not Available</p>
       <div>
         <header>
           <h3>Specifications</h3>
